# mlops_course

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.doc/: DataManagement.md  ModelDeployment.md  ModelTrainingAndEvaluation.md  MonitoringAndObservability.md
.dvc/: config  config.local.example
configs/grafana/dashboards/prompt-injection-classification-app/: pi_app_dashboard.json
configs/grafana/dashboards/system/: system_dashboard.json
configs/grafana/provisioning/dashboards/: dashboard.yaml
configs/grafana/provisioning/datasources/: prometheus.yaml
configs/prometheus/: prometheus.yaml
data/: .gitignore  prompt-injections-dataset-labeled-full.json.dvc  text_batch_1.json
deployment/docker/: docker-compose.yaml
deployment/docker/compose/: base.yaml  label-studio.yaml  monitoring.yaml  prompt-injection-classifier-app.yaml
deployment/docker/images/: prompt-injection-classifier-app.Dockerfile
deployment/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kind-config.yaml  prompt-injection-classifier-hpa.yaml  secrets.yaml.example  service.yaml
docker/: docker-compose.yaml
docker/compose/: base.yaml  label-studio.yaml  minio.yaml
help/: download_dataset.py  download_labeled_dataset_label_studio.py  stress_test_classifcation_endpoint.py
src/api/: logger.py  main.py  utils.py
src/api/core/: prompt_injection_classifier.py  schemas.py  settings.py
src/api/routes/: health.py  inference.py  metrics.py  schemas.py
src/test/: test_api.py
src/train/: prepare_split_dataset.py  train.py
